@@ -1,4 +1,4 @@
-# FFI::Platypus [![Build Status](https://api.cirrus-ci.com/github/Perl5-FFI/FFI-Platypus.svg)](https://cirrus-ci.com/github/Perl5-FFI/FFI-Platypus) [![Build Status](https://travis-ci.org/Perl5-FFI/FFI-Platypus.svg)](http://travis-ci.org/Perl5-FFI/FFI-Platypus) ![windows](https://github.com/Perl5-FFI/FFI-Platypus/workflows/windows/badge.svg) ![macos](https://github.com/Perl5-FFI/FFI-Platypus/workflows/macos/badge.svg)
+# FFI::Platypus [![Build Status](https://api.cirrus-ci.com/github/PerlFFI/FFI-Platypus.svg)](https://cirrus-ci.com/github/PerlFFI/FFI-Platypus) [![Build Status](https://travis-ci.org/PerlFFI/FFI-Platypus.svg)](http://travis-ci.org/PerlFFI/FFI-Platypus) ![windows](https://github.com/PerlFFI/FFI-Platypus/workflows/windows/badge.svg) ![macos](https://github.com/PerlFFI/FFI-Platypus/workflows/macos/badge.svg)
 
 Write Perl bindings to non-Perl libraries with FFI. No XS required.
 
@@ -1608,7 +1608,7 @@ That means all the way back to 5.8.1.  Unfortunately, 5.10.0 seems to have a pro
 that is difficult to diagnose.  Patches to fix are welcome, if you want to help
 out on this, please see:
 
-[https://github.com/Perl5-FFI/FFI-Platypus/issues/68](https://github.com/Perl5-FFI/FFI-Platypus/issues/68)
+[https://github.com/PerlFFI/FFI-Platypus/issues/68](https://github.com/PerlFFI/FFI-Platypus/issues/68)
 
 Since this is an older buggy version of Perl it is recommended that you instead
 upgrade to 5.10.1 or later.
@@ -1658,14 +1658,14 @@ If something does not work the way you think it should, or if you have a
 feature request, please open an issue on this project's GitHub Issue
 tracker:
 
-[https://github.com/perl5-FFI/FFI-Platypus/issues](https://github.com/perl5-FFI/FFI-Platypus/issues)
+[https://github.com/perlFFI/FFI-Platypus/issues](https://github.com/perlFFI/FFI-Platypus/issues)
 
 # CONTRIBUTING
 
 If you have implemented a new feature or fixed a bug then you may make a
 pull request on this project's GitHub repository:
 
-[https://github.com/Perl5-FFI/FFI-Platypus/pulls](https://github.com/Perl5-FFI/FFI-Platypus/pulls)
+[https://github.com/PerlFFI/FFI-Platypus/pulls](https://github.com/PerlFFI/FFI-Platypus/pulls)
 
 This project is developed using [Dist::Zilla](https://metacpan.org/pod/Dist::Zilla).  The project's git
 repository also comes with the `Makefile.PL` file necessary
@@ -1779,7 +1779,7 @@ be helpful to compare the runtime performance of Platypus if you are
 making significant changes to the Platypus Core.  For that I use
 \`FFI-Performance\`, which can be found in my GitHub repository here:
 
-- [https://github.com/Perl5-FFI/FFI-Performance](https://github.com/Perl5-FFI/FFI-Performance)
+- [https://github.com/PerlFFI/FFI-Performance](https://github.com/PerlFFI/FFI-Performance)
 
 ## System integrators
 
