@@ -20,7 +20,7 @@ diag          = +Devel::Hide
 diag          = +forks
 irc           = irc://irc.perl.org/#native
 travis_status = 1
-github_user   = Perl5-FFI
+github_user   = PerlFFI
 github_repo   = FFI-Platypus
 workflow      = windows
 workflow      = macos
@@ -38,7 +38,7 @@ diag_preamble = |     diag "for Perls older than 5.8.4 on or after July 1st 2020
 diag_preamble = |     diag "FFI-Platypus will refuse to install on these older Perls.  Please";
 diag_preamble = |     diag "take the time to migrate to a supported version of Perl ASAP.";
 diag_preamble = |     diag "";
-diag_preamble = |     diag "https://github.com/Perl5-FFI/FFI-Platypus/issues/271";
+diag_preamble = |     diag "https://github.com/PerlFFI/FFI-Platypus/issues/271";
 diag_preamble = |     diag "";
 diag_preamble = |     diag " !! WARNING WARNING WARNINGS WARNING !!";
 diag_preamble = |     diag "";
@@ -58,7 +58,7 @@ diag_preamble = |     diag "Please take the time to upgraded to a supported vers
 diag_preamble = |     diag "Perl.  Easiest upgrade is probably to 5.10.0 unthreaded, or";
 diag_preamble = |     diag "5.10.1.  Better would be to upgrade to 5.32.";
 diag_preamble = |     diag "";
-diag_preamble = |     diag "https://github.com/Perl5-FFI/FFI-Platypus/issues/271";
+diag_preamble = |     diag "https://github.com/PerlFFI/FFI-Platypus/issues/271";
 diag_preamble = |     diag "";
 diag_preamble = |     diag " !! WARNING WARNING WARNINGS WARNING !!";
 diag_preamble = |     diag "";
